# alpen-dashboards

./: .gitignore  .taplo.toml  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  justfile  zizmor.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md
.github/workflows/: cd-internal.yml  cd.yml  ci.yml  cron-zizmor.yml  docs.yml  lint.yml  security.yml  unit.yml  zizmor.yml
backend/: .gitignore  Cargo.toml  config.toml  example-config.toml  indexer.sqlite  indexer.sqlite-shm  rust-toolchain.toml
backend/crates/bridge/: Cargo.toml
backend/crates/bridge/src/: bridge_rpc.rs  cache.rs  context.rs  esplora.rs  lib.rs  state.rs  status.rs  types.rs  withdrawal_requests.rs  withdrawal_status.rs
backend/crates/bridge/src/db/: error.rs  mod.rs  traits.rs  types.rs
backend/crates/bridge/src/db/status/: db.rs  mock.rs  mod.rs  schema.rs
backend/crates/bridge/src/db/withdrawal_index/: db.rs  mock.rs  mod.rs  schema.rs  test_utils.rs
backend/crates/bridge/src/withdrawal_indexer/: decoder.rs  mod.rs  rpc.rs  task.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/network/: Cargo.toml
backend/crates/network/src/: lib.rs  status.rs  types.rs
backend/crates/utils/: Cargo.toml
backend/crates/utils/src/: lib.rs  rpc_client.rs
backend/crates/wallets/: Cargo.toml
backend/crates/wallets/src/: balance.rs  bridge_operator.rs  context.rs  errors.rs  faucet.rs  lib.rs
backend/migrations/: 20250603232639_init.sql  20250603232653_create_withdrawal_requests_table.sql  20250603233949_create_indexer_state_table.sql
backend/src/: activity.rs  bridge.rs  config.rs  main.rs  wallets.rs
backend/src/activity/: mod.rs  stats.rs  types.rs
backend/src/bridge/: cache.rs  mod.rs  status.rs  types.rs
backend/src/configs/: bridge.rs  env.rs  mod.rs  network.rs
backend/src/indexer/: db.rs  errors.rs  indexer.rs  mod.rs  models.rs  types.rs  withdrawal_requests.rs
backend/src/network/: status.rs  types.rs
backend/src/types/: activity.rs  mod.rs  network.rs
backend/src/utils/: mod.rs  retry_policy.rs  rpc_client.rs
backend/src/wallets/: balance.rs  bridge_operator.rs  context.rs  faucet.rs  mod.rs  traits.rs  types.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: config.json
frontend/src/: App.tsx  utils.ts
frontend/src/components/: BridgeOperatorBalance.tsx  FaucetBalance.tsx  StatusCard.tsx  TransactionId.tsx
frontend/src/hooks/: useBalances.ts  useBridgeStatus.ts  useConfig.ts  useNetworkStatus.ts
frontend/src/pages/: Balances.tsx  Bridge.tsx  Dashboard.tsx
frontend/src/providers/: ConfigProvider.tsx
frontend/src/styles/: balances.css  bridge.css  index.css  network.css
mock_rpc/: Cargo.toml
