[workspace]
  members = [
    "bin/dashboard",
    "crates/bridge",
    "crates/config",
    "crates/network",
    "crates/utils",
  ]
  resolver = "2"

  [workspace.package]
    edition = "2021"
    version = "0.2.0"

  [workspace.dependencies]
    # Internal
    status-bridge  = { path = "crates/bridge" }
    status-config  = { path = "crates/config" }
    status-network = { path = "crates/network" }
    status-utils   = { path = "crates/utils" }

    alpen-reth-primitives = { git = "https://github.com/alpenlabs/alpen.git", tag = "v0.3.0-rc.1" }
    strata-bridge-primitives = { git = "https://github.com/alpenlabs/strata-bridge.git", tag = "v0.3.0-rc.1" }
    strata-bridge-rpc = { git = "https://github.com/alpenlabs/strata-bridge.git", features = [
      "client",
    ], tag = "v0.3.0-rc.1" }
    strata-primitives = { git = "https://github.com/alpenlabs/alpen.git", tag = "v0.3.0-rc.1" }
    strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.3.0-rc.1" }
    typed-sled = { git = "https://github.com/alpenlabs/typed-sled" }

    # External
    alloy-primitives = { version = "1.4.1", features = [ "serde" ] }
    alloy-sol-types = { version = "1.4.1" }
    anyhow = { version = "1" }
    axum = { version = "0.8" }
    bitcoin = { version = "0.32.8", features = [ "serde" ] }
    hex = { version = "0.4" }
    jsonrpsee = { version = "0.26", features = [ "http-client" ] }
    reqwest = { version = "0.13.3", features = [ "json" ] }
    serde = { version = "1", features = [ "derive" ] }
    serde_json = { version = "1.0", default-features = false, features = [
      "alloc",
      "raw_value",
    ] }
    sled = { version = "0.34" }
    thiserror = { version = "1" }
    tokio = { version = "1.52.1", features = [ "macros", "rt-multi-thread" ] }
    toml = { version = "1.1.2" }
    tower-http = { version = "0.7", features = [ "cors" ] }
    tracing = { version = "0.1" }
    tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }
