[package]
  edition.workspace = true
  name              = "status-bridge"
  version.workspace = true

[lib]
  path = "src/lib.rs"

[dependencies]
  alpen-reth-primitives.workspace    = true
  anyhow.workspace                   = true
  status-config.workspace            = true
  status-utils.workspace             = true
  strata-bridge-primitives.workspace = true
  strata-bridge-rpc.workspace        = true
  strata-primitives.workspace        = true
  strata-tasks.workspace             = true
  typed-sled.workspace               = true

  alloy-primitives.workspace = true
  alloy-sol-types.workspace  = true
  axum.workspace             = true
  bitcoin.workspace          = true
  bitcoin-bosd.workspace     = true
  hex.workspace              = true
  jsonrpsee.workspace        = true
  reqwest.workspace          = true
  serde.workspace            = true
  serde_json.workspace       = true
  sled.workspace             = true
  thiserror.workspace        = true
  tokio.workspace            = true
  tracing.workspace          = true

[dev-dependencies]
  toml.workspace = true
