[package]
  edition.workspace = true
  name              = "status-network"
  version.workspace = true

[lib]
  path = "src/lib.rs"

[dependencies]
  anyhow.workspace        = true
  status-config.workspace = true
  status-utils.workspace  = true
  strata-tasks.workspace  = true

  axum.workspace       = true
  jsonrpsee.workspace  = true
  reqwest.workspace    = true
  serde.workspace      = true
  serde_json.workspace = true
  tokio.workspace      = true
  tracing.workspace    = true

[dev-dependencies]
  toml.workspace = true
