[package]
  edition.workspace = true
  name              = "status-wallets"
  version.workspace = true

[lib]
  path = "src/lib.rs"

[dependencies]
  status-config.workspace = true

  anyhow.workspace       = true
  async-trait.workspace  = true
  axum.workspace         = true
  reqwest.workspace      = true
  serde.workspace        = true
  serde_json.workspace   = true
  strata-tasks.workspace = true
  thiserror.workspace    = true
  tokio.workspace        = true
  tracing.workspace      = true
